fix for white strip on mobile portrait view

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -13,6 +13,15 @@ $head-font-name: "Roboto Slab";
 
 $shadow-colour: #fff;
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 @font-face {
 	font-family: $head-font-name;
 	src: url('../fonts/RobotoSlab-Bold.ttf');
@@ -480,6 +489,8 @@ border-color: $border-colour;
 	padding: 12px 12px 12px 12px;
 	font-size: 24px;
 	text-align: left;
+	
+	white-space: normal;
 	
 	.subtitle {
 		font-size: 14px;
